test/resources/typer/failing/CallError6.scala
object Call {
    L.Cons(1, "abc")
}